--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,11 @@
+# 用 o3 的時候必須要用 openai 的 key
+OPENAI_API_KEY=your-openai-api-key
+OPENAI_MODEL=o3
+
 OPENROUTER_API_KEY=your-openrouter-api-key
 OPENROUTER_MODEL=model-name
 OPENROUTER_BASEE_URL=openrouter-base-url
 
+# 爬取 OpenCores 網站資料時使用
 OPENCORES_USERNAME=opencores-login-username
 OPENCORES_PASSWORD=opencores-login-password
